[metadata]
name = ssh-exec-test
author = Code Factory Chile
summary = Validate SSH exec commands
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: SSH
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    ssh
    testing
    tools

